[package]
name = "hangman"
version = "0.1.0"
authors = ["Brendan Arciszewski <git@brendanarciszewski.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_crossterm = "0.5"
crossterm = "0.18"

[patch.crates-io]
bevy_crossterm = { git = "https://github.com/brianbruggeman/bevy_crossterm.git", rev = "0c292b31" }
