[package]
name = "hangman"
version = "0.1.0"
authors = ["Brendan Arciszewski <git@brendanarciszewski.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_crossterm = "0.7"
crossterm = "0.18"

[patch.crates-io]
bevy_crossterm = { git = "https://github.com/brendanarciszewski/bevy_crossterm.git", branch = "bevy-0.7-update" }
